// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label Chip ActiveLabelChip smoke-test 1`] = `
<div class="css-g5y9jx r-18u37iz r-1w6e6rj">
  <div class="css-g5y9jx r-1phboty r-18u37iz r-rs99b7 r-1iizze8 r-1bq2mok r-105ug2t"
       data-testid="chip-active-container"
       style="border-color: rgba(0, 0, 0, 0); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-g5y9jx r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
            data-testid="chip-active"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-g5y9jx r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
           style="padding-right: 0px;"
      >
        <div class="css-g5y9jx r-1kihuf0 r-tuq35u r-1m04atk r-9aemit">
          <div dir="auto"
               role="img"
               tabindex="-1"
               class="css-146c3p1 r-1niwhzg r-lrvibr r-633pao"
               style="font-size: 18px; color: rgb(29, 25, 43); transform: scaleX(1); line-height: 18px; font-family: material-community; font-weight: normal; font-style: normal;"
          >
            󰄬
          </div>
        </div>
        <div dir="auto"
             class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-15zivkp r-1jkjb r-1kb76zh r-14gqq1x r-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          errand
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`Label Chip DefaultLabelChip smoke-test 1`] = `
<div class="css-g5y9jx r-18u37iz r-1w6e6rj">
  <div class="css-g5y9jx r-1phboty r-18u37iz r-rs99b7 r-78d8zt r-1bq2mok r-105ug2t"
       data-testid="chip-container"
       style="border-color: rgba(0, 0, 0, 0); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-g5y9jx r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-g5y9jx r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-15zivkp r-1jkjb r-1kb76zh r-14gqq1x r-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          errand
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`Label Chip DisplayNameLabelChip smoke-test 1`] = `
<div class="css-g5y9jx r-18u37iz r-1w6e6rj">
  <div class="css-g5y9jx r-1phboty r-18u37iz r-rs99b7 r-78d8zt r-1bq2mok r-105ug2t"
       data-testid="chip-container"
       style="border-color: rgba(0, 0, 0, 0); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-g5y9jx r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-g5y9jx r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-15zivkp r-1jkjb r-1kb76zh r-14gqq1x r-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Display name
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`Label Chip InvertedLabelChip smoke-test 1`] = `
<div class="css-g5y9jx r-18u37iz r-1w6e6rj">
  <div class="css-g5y9jx r-1phboty r-18u37iz r-rs99b7 r-11oht4w r-1bq2mok r-105ug2t"
       data-testid="chip-inverted-container"
       style="border-color: rgba(0, 0, 0, 0); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-g5y9jx r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
            data-testid="chip-inverted"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-g5y9jx r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
           style="padding-right: 0px;"
      >
        <div class="css-g5y9jx r-1kihuf0 r-tuq35u r-1m04atk r-9aemit">
          <div dir="auto"
               role="img"
               tabindex="-1"
               class="css-146c3p1 r-1niwhzg r-lrvibr r-633pao"
               style="font-size: 18px; color: rgb(29, 25, 43); transform: scaleX(1); line-height: 18px; font-family: material-community; font-weight: normal; font-style: normal;"
          >
            󰄬
          </div>
        </div>
        <div dir="auto"
             class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-15zivkp r-1jkjb r-1kb76zh r-14gqq1x r-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          errand
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`Label Chip ReadOnlyLabelChip smoke-test 1`] = `
<div class="css-g5y9jx r-18u37iz r-1w6e6rj">
  <div class="css-g5y9jx r-1phboty r-18u37iz r-rs99b7 r-1iizze8 r-1bq2mok r-105ug2t"
       data-testid="chip-active-container"
       style="border-color: rgba(0, 0, 0, 0); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button aria-disabled="true"
            disabled
            role="button"
            tabindex="-1"
            class="css-g5y9jx r-12vffkv r-bnwqim r-ctqt5z r-1udh08x r-113qch9 r-13qz1uu"
            data-testid="chip-active"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-g5y9jx r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-15zivkp r-1jkjb r-1kb76zh r-14gqq1x r-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          errand
        </div>
      </div>
    </button>
  </div>
</div>
`;
